--- a/src/components/Cards/NoticiaCard.css
+++ b/src/components/Cards/NoticiaCard.css
@@ -1,21 +1,36 @@
 .card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 350px;
-    max-height: 350px;
-    margin: auto;
-    margin-bottom: 15px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    background-color: #808080;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+  max-height: 350px;
+  margin: auto;
+  margin-bottom: 15px;
+  background-color: #808080;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .card-img-top {
-    margin-top: 15px;
-    display: block;
-    width: 100%;
-    height: 100%;
-    max-width: 18rem;
-    max-height: 10rem;
-    object-fit: cover;
+  margin-top: 15px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  max-width: 22rem;
+  max-height: 10rem;
+  object-fit: cover;
+}
+
+.card-body {
+  background-color: aqua;
+  margin-bottom: 15px;
+  width: 22rem;
+  height: 10rem;
+}
+
+.button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 20px;
+  margin-right: 30px;
 }
